Bug #223062 --> Unable to download from a POP mail server - hangs on a specfic message.